# developer-os

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml  contribution.txt  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  daily-update.yml  monthly-report.yml  streak.yml  weekly-summary.yml
data/reports/: daily.md  dashboard.md  monthly.md  weekly.md
data/snapshots/: github.json  leetcode.json
data/streak/: heartbeat.txt
developer_os/: __init__.py  analytics.py  cli.py  coding.py  config.py  csv_utils.py  dashboard.py  dates.py  errors.py  jobs.py  learning.py  production.py  settings.py  snapshots.py  storage.py  version.py  webapp.py
developer_os/services/: __init__.py  github.py  leetcode.py
developer_os/templates/: base.html  dashboard.html  search.html  stats.html
docs/: demo-script.md  deployment.md  final-audit-report.md  interview-talking-points.md  project-walkthrough.md  release-checklist.md  resume-project-description.md  streak-maintenance-report.md  visual-branding-kit.md
scripts/: generate_brand_assets.py  update.py
templates/: coding_progress_template.csv  job_applications_template.csv  learning_notes_template.csv
tests/: conftest.py  test_analytics.py  test_csv_and_cli.py  test_dashboard.py  test_services.py  test_settings_and_snapshots.py  test_trackers.py  test_webapp.py
