[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "developer-os"
version = "1.0.0"
description = "Automated developer analytics platform"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Developer OS Maintainers" },
]
keywords = ["analytics", "github", "leetcode", "dashboard", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/susatwik/developer-os"
Documentation = "https://github.com/susatwik/developer-os/blob/main/README.md"
Repository = "https://github.com/susatwik/developer-os"
Issues = "https://github.com/susatwik/developer-os/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "fastapi>=0.115",
  "jinja2>=3.1",
  "httpx>=0.27",
  "gunicorn>=22.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]
web = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "gunicorn>=22.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.scripts]
developer-os = "developer_os.cli:main"
developer-os-web = "developer_os.webapp:main"

[tool.setuptools.packages.find]
include = ["developer_os*"]

[tool.setuptools.package-data]
developer_os = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=developer_os --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=80"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]
